# bpfd

./: CMakeLists.txt  INSTALL.md  Makefile  Makefile.arm64static  README.md  TESTS  TODO  base64.h  bpfd.c  bpfd.h  elf.c  init_env  run_bpfd.sh  toolchain-aarch64.cmake
android/: Android.bp  Makefile  bpfmap.h  elf.c  elf_loader.c  elf_loader.cc  libbpf.c  libbpf.h  libbpf_bcc.c  libbpf_bcc.h  libbpf_core.c  libbpf_core.h  loader.cc  perf_reader.c  perf_reader.h  run_tis.sh  setns.h  tis.cc  utils.h
android/bpfloader/: Makefile  bpfloader  m  main.cc
android/timeinstate/: build-tis.sh  helpers.h  tracetimeinstate.c  tracetimeinstate.py
bcc-deps/: README  libbpf.h  perf_reader.c  perf_reader.h
lib/bpf/: bpf.c  bpf.h  libbpf.c  libbpf.h
patches/kernel/: 0001-bpf-stackmap-Implement-bpf_get_next_key.patch  git-sendpatch.sh
protobuf/: Makefile  bpfd.proto  test-read.cpp  test-write.cpp
scripts/: update_bcc_deps.sh
scripts/setup-scripts/: README  build-bpfd-full-package.sh  deb.control
src/: base64.c  bcc-init  bpfd.c  bpfd.h  cmd_parsers.c  cmd_parsers.h  remote_perf_reader.c  utils.c  utils.h
src/lib/bpf/: libbpf.h
src/setup-scripts/bcc/: README  bcc-env  bcc-init  bcc.bash.rc  build-bpfd-full-package.sh  deb.control
tests/: TESTS  TESTS.hikey  TEST_attach_tracepoint  run_tests.sh  test-pexpect.py
源文件/: bpfd.c
